# RideBotUcab

./: CONFIG.md  README.md  build.sh  main.cpp  meson.build
include/application/: AStar.h  Kernel.h  NavigationModule.h  RobotManager.h  TaskManager.h  TaskScheduler.h  ThreadManager.h
include/domain/: Environment.h  Global.h  Robot.h  Route.h  Task.h
include/infrastructure/: GPSSensor.h  LIDARSensor.h  Storage.h  WebServer.h
src/: main.cpp
src/application/: AStar.cpp  Kernel.cpp  NavigationModule.cpp  RobotManager.cpp  TaskManager.cpp  TaskScheduler.cpp  ThreadManager.cpp
src/domain/: Environment.cpp  Robot.cpp  Task.cpp
src/infrastructure/: GPSSensor.cpp  LIDARSensor.cpp  Storage.cpp  WebServer.cpp
tests/: main.test.cpp  test_storage.cpp
web/: app.js  index.html  styles.css
